# html

./: .clang_complete  CMakeLists.txt  README.md  index.html
assets/: div.html  flex.html  index.html  serenity.html  text.html
cmake/modules/: libraries.cmake
include/: AST.h  HTMLAST.h  html.h  html_lexer.h  html_parser.h  html_token.h  html_utils.h  lexer.h  parser.h  token.h
include/html/: HTMLAST.h  html.h  html_lexer.h  html_options.h  html_parser.h  html_tags.h  html_token.h  html_utils.h
src/: AST.c  HTMLAST.c  html.c  html_tags.c  html_utils.c  lexer.c  main.c  parser.c  token.c
test/: CMakeLists.txt  html_e
test/assets/: compute.html  example2.html  google.html  text.html
test/include/test/: test.h
test/src/: main.c  test.c
test/test/: test
test/test/assets/: comment.html  gp.html  index.html  omnix.html  props.html  styled.html  text.html  text2.html
